--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 
 {
-  "presets": ["env", "react", "stage-0"]
+  "presets": ["@babel/preset-react"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
