--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.8.23",
     "antd": "^3.20.5",
     "autoprefixer": "^8.2.0",
     "babel-loader": "^8.0.6",
@@ -33,7 +34,11 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
     "style-loader": "^0.20.3",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack": "4.28.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1",
+    "webpack-dev-server": "3.7.2"
   }
 }
